# ratelimit-poc

./: .gitignore  Bucket.cpp  Bucket.h  CMakeLists.txt  README.md  RateLimitSvc.cpp  RateLimitSvc.h  RateLimitSvcImpl.cpp  RateLimiter.cpp  RateLimiter.h  main.cpp
compose/: docker-compose.yaml
compose/config/: ambassador.yaml  backend-mapping.yaml  ratelimiter.yaml
docker/: Dockerfile
k8/: ambassador-deployment.yaml  ambassador-svc.yaml  mapping.yaml  rated-deployment.yaml  rated-svc.yaml  ratelimit.yaml  rest-diag-deployment.yaml  rest-diag-svc.yaml
